# file-encrypt

./: Cargo.toml  LICENSE  README.md  test.enc  test.txt.enc
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/encryption_algos/: aes256_gcm.rs  chacha20_poly.rs  mod.rs
src/hash_algos/: argon_hash.rs  mod.rs
tests/: encryption_tests.rs  integration_test.rs
