[package]
name = "lockbox_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
argon2 = { version = "0.5.3", features = ["password-hash"] }
b64 = "0.4.0"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
which = "7.0.0"
