[package]
name = "file-encrypt"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "CLI tool for encrypting local files"
readme = "README.md"
repository = "https://github.com/cbass-d/file-encrypt"
categories = ["command-line-utilities"]

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.94"
argon2 = { version = "0.5.3", features = ["password-hash"] }
b64 = "0.4.0"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.6"
log = "0.4.22"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
